--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.application.name = test
+spring.application.name = PRAKHAR-SERVICE
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
